src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'Tungsten';
  src: url('../public/fonts/tungsten/Tungsten-Medium.ttf');
  font-weight: 400;
}
@font-face {
  font-family: 'Tungsten';
  src: url('../public/fonts/tungsten/Tungsten-SemiBold.ttf');
  font-weight: 700;
}

@font-face {
  font-family: 'Tungsten';
  src: url('../public/fonts/tungsten/Tungsten-Bold.ttf');
  font-weight: 800;
}

@font-face {
  font-family: 'Geizer';
  src: url('../public/fonts/geizer/Geizer.otf');
  font-weight: 400;
}

html, body {
  background: #f4ed3f;
  background-image: url('../public/images/yellow-grunge-repeat.jpg');
  background-repeat: repeat;
  background-size: 350px;
}

/* width */
::-webkit-scrollbar {
  width: 5px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #000000;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #f4ed3f;
  border-radius: 5px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #f4ed3f;
}

.content-body {
  position: relative;
  /* height: 100%; */
  min-height: calc(100vh - 45px);
}

/* Mapbox Marker Styles */
.marker {
  /* background: black; */
  /* box-shadow: 5px -5px 15px black; */
  background-size: 100%;
  background-position: center center;
  background-repeat: no-repeat;
  width: 40px;
  height: 40px;
  padding: 0px;
  border-radius: 50%;
  cursor: pointer;
}

.tacklebox {
  background-image: url('../public/images/map-icons/tacklebox.png'), radial-gradient(circle at center,rgba(0,0,0,.85) 0,hsla(0,0%,9%,0) 80%);

}

.tourdate {
  background-image: url('../public/images/map-icons/tourdate.png'), radial-gradient(circle at center,rgba(0,0,0,.85) 0,hsla(0,0%,9%,0) 80%);
}
.mapboxgl-popup {
  max-width: 200px;
}

.mapboxgl-popup-content {
  text-align: center;
  font-family: 'Tungsten', sans-serif;
  font-size: 1.5rem;
  line-height: 2rem;
  border-radius: 5px;
  border: 1.5px solid #f4ed3f;
  background: black;
  color: white;
  height: 80px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 5px 25px 0px 25px;
}

.mapboxgl-popup-close-button {
  top: -2px;
  /* color: #f4ed3f; */
  font-size: 3rem;
  right: 7px;
  outline: none !important;
}

.mapboxgl-popup-tip {
  display: none;
  border-top-color: black !important;
  color: #f4ed3f;
  /* border: 10px solid black; */
  background: black;
}

.mapboxgl-popup-content > a {
  outline: none !important;
}

iframe, canvas {
  border-radius: 0.175rem !important;
}

@media only screen and (min-width: 1024px) {
  .mapboxgl-ctrl-bottom-right, .mapboxgl-ctrl.mapboxgl-ctrl-attrib {
    border-radius: 0 0 0.175rem 0 !important;
  }
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
  -webkit-box-shadow: 0 0 0 30px #d2c551 inset !important;
}

.input-group {
  display: flex;
  flex-direction: row-reverse;
  align-items: center;
}

input[type='file'] {
  background-color: transparent;
}

.input-group input[type='file'] {
  flex: 0.75;
  display: flex;
  align-items: center;
  justify-content: center;
}

.input-group input[type='file']::-webkit-file-upload-button {
  /* display: none; */
}

.input-group input[type='file']::file-selector-button {
  /* display: none; */
  background: black;
  color: #d2c551;
  padding: 0.5rem 2rem;
  border-radius: 9999px;
  outline: none;
  font-size: 1.5rem;
  line-height: 2rem;
  margin-right: 25px;
}

.input-group-text {
  flex: 0.25;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
}
div {
}

